<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lifecounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="plus1">+</string>
    <string name="plus5">+5</string>
    <string name="minus1">-</string>
    <string name="minus5">-5</string>
    <string name="player1_score">20</string>
    <string name="player2_score">20</string>
    <string name="player3_score">20</string>
    <string name="player4_score">20</string>
    <string name="player_defeat"></string>


</resources>
